src/objects/OrderApi__Sales_Order__c.object
<CustomObject>
    <fields>
        <fullName>OrderApi__Has_Subscription__c</fullName>
        <description>** System Calculated ** Checked when the Sales Order contains a Sales Order Line that is linked to a Subscription.</description>
        <formula>OrderApi__Subscription_Lines__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** Checked when the Sales Order contains a Sales Order Line that is linked to a Subscription.</inlineHelpText>
        <label>Has Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Date__c</fullName>
        <description>**System Calculated/Conditional/Override** The date to use as the Invoice Date for any Invoice generated from the Sales Order only applies to Sales Orders where Is Scheduled is not set to true.</description>
        <inlineHelpText>**System Calculated/Conditional/Override** The date to use as the Invoice Date for any Invoice generated from the Sales Order only applies to Sales Orders where Is Scheduled is not set to true.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated/Override** Checked when a recurring order or contract is active.</description>
        <inlineHelpText>**System Calculated/Override** Checked when a recurring order or contract is active.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when a Sales Order is cancelled.</description>
        <inlineHelpText>Checked when a Sales Order is cancelled.</inlineHelpText>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated/Override** Checked when the Sales Order is closed. Sales Orders close automatically when paid in full by the customer, when a contract expires, or when a contract/recurring Sales Order is cancelled.</description>
        <inlineHelpText>**System Calculated/Override** Checked when the Sales Order is closed. Sales Orders close automatically when paid in full by the customer, when a contract expires, or when a contract/recurring Sales Order is cancelled.</inlineHelpText>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Evergreen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated/Override** Checked when a Sales Order is charged to the customer on a recurring, never-ending basis. These &quot;Standing Sales Orders&quot; are never closed until cancelled.</description>
        <inlineHelpText>**System Calculated/Override** Checked when a Sales Order is charged to the customer on a recurring, never-ending basis. These &quot;Standing Sales Orders&quot; are never closed until cancelled.</inlineHelpText>
        <label>Is Evergreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated/Conditional/Override** Checked when the Sales Order has generated Invoices as a means to collect payment. Default unchecked. Automatically checked if &quot;Posting Entity&quot; is set to &quot;Invoice&quot;.</description>
        <inlineHelpText>**System Calculated/Conditional/Override** Checked when the Sales Order has generated Invoices as a means to collect payment. Default unchecked. Automatically checked if &quot;Posting Entity&quot; is set to &quot;Invoice&quot;.</inlineHelpText>
        <label>Is Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Pending_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related Sales Order is pending payment due to offsite payment or shippable items.</description>
        <inlineHelpText>When checked, the related Sales Order is pending payment due to offsite payment or shippable items.</inlineHelpText>
        <label>Is Pending Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked all Invoices related to the Sales Order will post an receivable transaction to the GL.</description>
        <inlineHelpText>When checked all Invoices related to the Sales Order will post an receivable transaction to the GL.</inlineHelpText>
        <label>Is Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the Sales Order is recurring and the customer is charged repeatedly based on the Billing Frequency and Billing Frequency UOM calculation.</description>
        <inlineHelpText>Checked when the Sales Order is recurring and the customer is charged repeatedly based on the Billing Frequency and Billing Frequency UOM calculation.</inlineHelpText>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated/Override** Checked when the Sales Order has generated/scheduled Invoices or E-Payments. Default unchecked.</description>
        <inlineHelpText>**System Calculated/Override** Checked when the Sales Order has generated/scheduled Invoices or E-Payments. Default unchecked.</inlineHelpText>
        <label>Is Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when a recurring Sales Order is suspended. When a Sales Order is suspended the customer will not be charged until the box is unchecked.</description>
        <inlineHelpText>Checked when a recurring Sales Order is suspended. When a Sales Order is suspended the customer will not be charged until the box is unchecked.</inlineHelpText>
        <label>Is Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Count__c</fullName>
        <description>**System Calculated** Count of the number of items related to the sales order.</description>
        <inlineHelpText>**System Calculated** Count of the number of items related to the sales order.</inlineHelpText>
        <label>Item Count</label>
        <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__JSON_Data__c</fullName>
        <description>Stores availabe badge types for related Sales Order Lines as JSON format.</description>
        <inlineHelpText>Stores availabe badge types for related Sales Order Lines as JSON format.</inlineHelpText>
        <label>SYSTEM</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Mass_Proforma_Email_Subject__c</fullName>
        <description>Subject field used for mass proforma emails. Populated from related Subscription Plan or Business Group.</description>
        <inlineHelpText>Subject field used for mass proforma emails. Populated from related Subscription Plan or Business Group.</inlineHelpText>
        <label>SYSTEM</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Memo__c</fullName>
        <description>Optional memo that displays on the sales order sent to the customer as well as on customer statements.</description>
        <inlineHelpText>Optional memo that displays on the sales order sent to the customer as well as on customer statements.</inlineHelpText>
        <label>Memo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Number_of_Installments__c</fullName>
        <description>**Required Conditionally** The number of invoices or scheduled payments to create for the payment schedule. Required for Sales Orders with Scheduled Payments with Schedule Type of &quot;Termed Recurring&quot; or &quot;Installment&quot;.</description>
        <inlineHelpText>**Required Conditionally** The number of invoices or scheduled payments to create for the payment schedule. Required for Sales Orders with Scheduled Payments with Schedule Type of &quot;Termed Recurring&quot; or &quot;Installment&quot;.</inlineHelpText>
        <label>Number of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated**  The related payment gateway.</description>
        <inlineHelpText>**System Calculated** The related payment gateway.</inlineHelpText>
        <label>Payment Gateway</label>
        <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The stored Payment Method to use as payment for charges made against the Sales Order.</description>
        <inlineHelpText>The stored Payment Method to use as payment for charges made against the Sales Order.</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>OrderApi__Payment_Method__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The payment terms for the sales order. If not defined on record creation the default terms defined in the admin settings are used.</description>
        <inlineHelpText>The payment terms for the sales order. If not defined on record creation the default terms defined in the admin settings are used.</inlineHelpText>
        <label>Payment Terms</label>
        <referenceTo>OrderApi__Payment_Terms__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Posted_Date__c</fullName>
        <description>**System Calculated/Override** The date the Sales Order posted Invoices to the GL.</description>
        <inlineHelpText>**System Calculated/Override** The date the Sales Order posted Invoices to the GL.</inlineHelpText>
        <label>Posted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Posting_Entity__c</fullName>
        <description>**System Calculated/Override** The entity the Sales Order posted too. Sales Orders either post through an Invoice(s) or through a single Receipt as a Cash Sale.</description>
        <inlineHelpText>**System Calculated/Override** The entity the Sales Order posted too. Sales Orders either post through an Invoice(s) or through a single Receipt as a Cash Sale.</inlineHelpText>
        <label>Posting Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Receipt</fullName>
                    <default>true</default>
                    <label>Receipt</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Posting_Status__c</fullName>
        <description>**System Calculated/Conditional/Override** The posting status for the Sales Order represents the posting status of related Invoices or the posting status of the Cash Sale Receipt, depending on the Posting Entity.</description>
        <inlineHelpText>**System Calculated/Conditional/Override** The posting status for the Sales Order represents the posting status of related Invoices or the posting status of the Cash Sale Receipt, depending on the Posting Entity.</inlineHelpText>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Preferred_Email__c</fullName>
        <description>System field used for proforma invoice emails. Auto populated from related contact record&apos;s preferred email</description>
        <inlineHelpText>System field used for proforma invoice emails. Auto populated from related contact record&apos;s preferred email</inlineHelpText>
        <label>SYSTEM</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderApi__Processing_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Processing Changes on the Sales Order so payment can be locked down.</description>
        <inlineHelpText>Processing Changes on the Sales Order so payment can be locked down.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Email_Sent_Date__c</fullName>
        <description>** SYSTEM FIELD ** Automatically updated to the date time the last proforma invoice email was sent related to this sales order. If no proforma invoice email was sent the value of this field will remain empty.</description>
        <inlineHelpText>** SYSTEM FIELD ** Automatically updated to the date time the last proforma invoice email was sent related to this sales order. If no proforma invoice email was sent the value of this field will remain empty.</inlineHelpText>
        <label>Proforma Invoice Email Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** SYSTEM FIELD ** Automatically checked when a proforma invoice email has been sent from this sales order.</description>
        <inlineHelpText>** SYSTEM FIELD ** Automatically checked when a proforma invoice email has been sent from this sales order.</inlineHelpText>
        <label>Proforma Invoice Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Require_Payment_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked,Payment to the sales order requires an active and valid Payment Method on file. Defaults unchecked.</description>
        <inlineHelpText>When checked,Payment to the sales order requires an active and valid Payment Method on file. Defaults unchecked.</inlineHelpText>
        <label>Require Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Schedule_Frequency__c</fullName>
        <description>The frequency to Invoice or auto-charge a customer for the Sales Order. Valid values include &quot;Daily&quot;, &quot;Weekly&quot;, &quot;Semi-Monthly&quot;, &quot;Monthly&quot;, &quot;Semi-Annually&quot;, or &quot;Annually&quot;.</description>
        <inlineHelpText>The frequency to Invoice or auto-charge a customer for the Sales Order. Valid values include &quot;Daily&quot;, &quot;Weekly&quot;, &quot;Semi-Monthly&quot;, &quot;Monthly&quot;, &quot;Semi-Annually&quot;, or &quot;Annually&quot;.</inlineHelpText>
        <label>Schedule Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Schedule_Status__c</fullName>
        <description>**System Calculated/Conditional/Override** A status/description for Sales Orders that hold a schedule of either Invoices (Installment/Termed Recurring) or E-Payments (Recurring/Standing).</description>
        <inlineHelpText>**System Calculated/Conditional/Override** A status/description for Sales Orders that hold a schedule of either Invoices (Installment/Termed Recurring) or E-Payments (Recurring/Standing).</inlineHelpText>
        <label>Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Schedule_Type__c</fullName>
        <description>Select &quot;Recurring&quot; to automatically charge a credit card or bank account for the total amount of the Sales Order on a set schedule, select &quot;Installment&quot; to Invoice the customer for a portion of the Sales Order on a set schedule.</description>
        <inlineHelpText>Select &quot;Recurring&quot; to automatically charge a credit card or bank account for the total amount of the Sales Order on a set schedule, select &quot;Installment&quot; to Invoice the customer for a portion of the Sales Order on a set schedule.</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OrderApi__Posting_Entity__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Termed Recurring</fullName>
                </value>
                <value>
                    <fullName>Evergreen Recurring</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
                <value>
                    <fullName>Simple Invoice</fullName>
                </value>
                <value>
                    <fullName>Simple Receipt</fullName>
                    <default>true</default>
                    <label>Simple Receipt</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_City__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Contact__c</fullName>
        <description>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Country__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Postal_Code__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_State__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Street__c</fullName>
        <description>**System Calculated/Conditional** Shipping Street derives from the Contact Mailing Street or the Account Shipping Street when Calculate Shipping Details is checked.</description>
        <inlineHelpText>**System Calculated/Conditional** Shipping Street derives from the Contact Mailing Street or the Account Shipping Street when Calculate Shipping Details is checked.</inlineHelpText>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Source_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to Source Code.</description>
        <inlineHelpText>**System Calculated/Override** Link to Source Code.</inlineHelpText>
        <label>Source Code</label>
        <referenceTo>OrderApi__Source_Code__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Start_Date__c</fullName>
        <description>The date when the subscription starts. This date indicates when the customer first purchased the subscription and isn&apos;t necessarily the same as the current term start date.</description>
        <inlineHelpText>The date when the subscription starts. This date indicates when the customer first purchased the subscription and isn&apos;t necessarily the same as the current term start date.</inlineHelpText>
        <label>Schedule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Status__c</fullName>
        <description>The status of the Sales Order.</description>
        <inlineHelpText>The status of the Sales Order.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Lines__c</fullName>
        <description>** System Calculated ** Counts the number of Sales Order Lines where a Subscription Item is present.</description>
        <inlineHelpText>** System Calculated ** Counts the number of Sales Order Lines where a Subscription Item is present.</inlineHelpText>
        <label>Subscription Lines</label>
        <summaryFilterItems>
            <field>OrderApi__Sales_Order_Line__c.OrderApi__Is_Subscription__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subtotal__c</fullName>
        <description>**System Calculated** Rollup summary of Sales Order Lines &quot;Subtotal&quot; field.</description>
        <inlineHelpText>**System Calculated** Rollup summary of Sales Order Lines &quot;Subtotal&quot; field.</inlineHelpText>
        <label>Subtotal</label>
        <summarizedField>OrderApi__Sales_Order_Line__c.OrderApi__Subtotal__c</summarizedField>
        <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Suspended_Date__c</fullName>
        <description>**System Calculated/Override** The date the recurring order or contract was suspended.</description>
        <inlineHelpText>**System Calculated/Override** The date the recurring order or contract was suspended.</inlineHelpText>
        <label>Suspended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Suspended_Reason__c</fullName>
        <description>**System Calculated/Conditionally Required** If a Standing/Recurring Sales Order is Suspended, Suspended Reason may be required depending on how your environment was configured.</description>
        <inlineHelpText>**System Calculated/Conditionally Required** If a Standing/Recurring Sales Order is Suspended, Suspended Reason may be required depending on how your environment was configured.</inlineHelpText>
        <label>Suspended Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment Method Declined</fullName>
                </value>
                <value>
                    <fullName>Payment Method Expired</fullName>
                </value>
                <value>
                    <fullName>Payment Method Invalid</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__System_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to refresh the Sales Order and related Sales Order lines, Invoices, Invoice Lines, and Scheduled Payments as appropriate.</description>
        <inlineHelpText>Check this box to refresh the Sales Order and related Sales Order lines, Invoices, Invoice Lines, and Scheduled Payments as appropriate.</inlineHelpText>
        <label>Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <description>**System Calculated**. Subtotal +</description>
        <formula>OrderApi__Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Subtotal +</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Valid_Payment_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated/Override** Checked when a charge is attempted and accepted by your payment gateway service.</description>
        <inlineHelpText>**System Calculated/Override** Checked when a charge is attempted and accepted by your payment gateway service.</inlineHelpText>
        <label>Valid Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proforma_Invoice_Url__c</fullName>
        <formula>&apos;https://fontevadev-fontevacustomer-160ec05bb8f.cs11.force.com/orderapi__checkout?salesorder=&apos; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proforma Invoice Url</label>
        <type>Text</type>
    </fields>
    <label>Sales Order</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OrderApi__Contact__c</columns>
        <columns>OrderApi__Entity__c</columns>
        <columns>OrderApi__Status__c</columns>
        <columns>OrderApi__Is_Scheduled__c</columns>
        <columns>OrderApi__Business_Group__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Sales Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>